// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup renders 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
>
  <div
    className="sc-kfWwvt ifHBWQ"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hZiMVj gBSjGv"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm getyum"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
    <div
      className="sc-hZiMVj diqqyf"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm ktwdPy"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-kfWwvt bCTwqT"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hZiMVj ggbnAn"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm dyIvnO"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
    <div
      className="sc-hZiMVj hkyZhj"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm flRmta"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders RTL 1`] = `
<div
  className="sc-kfWwvt ifHBWQ"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-hZiMVj diqqyf"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm ktwdPy"
        dir="rtl"
        placeholder="Country"
        type="text"
      />
      <label
        className="sc-hhICeM cryZUP"
      />
    </div>
  </div>
  <div
    className="sc-hZiMVj gBSjGv"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm getyum"
        dir="rtl"
        placeholder="Phone"
        type="text"
      />
      <label
        className="sc-hhICeM cryZUP"
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders and allows access to DOM and values for text field 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-kfWwvt ifHBWQ"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hZiMVj gBSjGv"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm getyum"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
    <div
      className="sc-hZiMVj diqqyf"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm ktwdPy"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
  </div>
  <span
    className="sc-cmvVVv ibPxIW"
    size="xsmall"
  >
    Country: 
    Estonia
  </span>
  <span
    className="sc-cmvVVv ibPxIW"
    size="xsmall"
  >
    Phone: 
    +372 45678901
  </span>
</div>
`;

exports[`TextInputGroup renders and allows event listeners for the select fields 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-csvytd jnmciW"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-fjtGNs jbNxYM"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-10-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-18kgzmi-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-fmlCPO JraNY"
            />
            <div
              className="sc-bELNXw haYpLg"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-10-placeholder"
              >
                <div
                  className="sc-hJEwCo dTduTW"
                >
                  Country
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-10-listbox"
                aria-describedby="react-select-10-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-10-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-10-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-dEgOyr"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-cvnuvz jGWrOU"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-11-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-91yr6k-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-fmlCPO JraNY"
            />
            <div
              className="sc-bELNXw haYpLg"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-11-placeholder"
              >
                <div
                  className="sc-hJEwCo dTduTW"
                >
                  Vehicle
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-11-listbox"
                aria-describedby="react-select-11-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-11-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-11-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-dEgOyr"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    className="sc-cmvVVv ibPxIW"
    size="xsmall"
  >
    Country: 
  </span>
  <span
    className="sc-cmvVVv ibPxIW"
    size="xsmall"
  >
    Vehicle: 
  </span>
</div>
`;

exports[`TextInputGroup renders different types 1`] = `
<div
  className="sc-kfWwvt ifHBWQ"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-hZiMVj gBSjGv"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm getyum"
        dir="ltr"
        placeholder="Email"
        type="email"
      />
      <label
        className="sc-hhICeM dxUkQc"
      />
    </div>
  </div>
  <div
    className="sc-hZiMVj diqqyf"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm jztswv"
        dir="ltr"
        placeholder="Password"
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders multi select 1`] = `
<div
  className="sc-csvytd jnmciW"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-fjtGNs jbNxYM"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-18kgzmi-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-112g2nh-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          >
            xLarge
          </div>
          <div
            className="sc-kdjpcd jrgbJc"
          >
            <div
              className=" css-jexdti-placeholder"
              id="react-select-4-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-4-listbox"
              aria-describedby="react-select-4-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-4-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-4-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-cvnuvz jGWrOU"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-91yr6k-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-112g2nh-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          >
            xLarge
          </div>
          <div
            className="sc-kdjpcd jrgbJc"
          >
            <div
              className=" css-jexdti-placeholder"
              id="react-select-5-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-5-listbox"
              aria-describedby="react-select-5-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-5-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-5-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select 1`] = `
<div
  className="sc-csvytd jnmciW"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-fjtGNs jbNxYM"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-18kgzmi-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1f3h6sw-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          />
          <div
            className="sc-bELNXw haYpLg"
          >
            <div
              className=" css-wuj7bk-placeholder"
              id="react-select-2-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-2-listbox"
              aria-describedby="react-select-2-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-2-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-2-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-cvnuvz jGWrOU"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-91yr6k-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1f3h6sw-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          />
          <div
            className="sc-bELNXw haYpLg"
          >
            <div
              className=" css-wuj7bk-placeholder"
              id="react-select-3-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-3-listbox"
              aria-describedby="react-select-3-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-3-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-3-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select RTL 1`] = `
<div
  className="sc-csvytd jnmciW"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-fjtGNs jbNxYM"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-91yr6k-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1f3h6sw-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          />
          <div
            className="sc-bELNXw haYpLg"
          >
            <div
              className=" css-wuj7bk-placeholder"
              id="react-select-8-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-8-listbox"
              aria-describedby="react-select-8-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-8-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-8-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-cvnuvz jGWrOU"
  >
    <div
      className=" css-9ebu9r-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-18kgzmi-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1f3h6sw-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          >
            xLarge
          </div>
          <div
            className="sc-bELNXw haYpLg"
          >
            <div
              className=" css-wuj7bk-placeholder"
              id="react-select-9-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-9-listbox"
              aria-describedby="react-select-9-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-9-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-9-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select vertical 1`] = `
<div
  className="sc-csvytd bZQgfd"
  dir="ltr"
  orientation="vertical"
>
  <div
    className="sc-fjtGNs jbNxYM"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-1lbmnj-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1f3h6sw-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          >
            xLarge
          </div>
          <div
            className="sc-bELNXw haYpLg"
          >
            <div
              className=" css-wuj7bk-placeholder"
              id="react-select-6-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-6-listbox"
              aria-describedby="react-select-6-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-6-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-6-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-cvnuvz jGWrOU"
  >
    <div
      className=" css-1tsy5a7-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-ouirde-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-1f3h6sw-ValueContainer"
        >
          <div
            className="sc-fmlCPO JraNY"
          >
            xLarge
          </div>
          <div
            className="sc-bELNXw haYpLg"
          >
            <div
              className=" css-wuj7bk-placeholder"
              id="react-select-7-placeholder"
            >
              <div
                className="sc-hJEwCo dTduTW"
              >
                Choose an option
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-describedby="react-select-7-placeholder"
              aria-expanded={false}
              aria-haspopup={true}
              aria-owns="react-select-7-listbox"
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-7-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <svg
            className="sc-dEgOyr"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            style={
              Object {
                "marginInlineEnd": "0.5rem",
              }
            }
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders sizes 1`] = `
<div
  className="flex flex-col justify-around items-center w-full gap-2"
>
  <div
    className="sc-kfWwvt gGcVxN"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hZiMVj gBSjGv"
    >
      <input
        className="sc-hQikvm cBtbuy"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hZiMVj diqqyf"
    >
      <input
        className="sc-hQikvm OPEkq"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-kfWwvt gGcVxN"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hZiMVj gBSjGv"
    >
      <input
        className="sc-hQikvm bLRcgV"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hZiMVj diqqyf"
    >
      <input
        className="sc-hQikvm eVPoMV"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-kfWwvt ifHBWQ"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hZiMVj gBSjGv"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm getyum"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
    <div
      className="sc-hZiMVj diqqyf"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm ktwdPy"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders vertical 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-kfWwvt eBOozG"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hZiMVj ggbnAn"
    >
      <input
        className="sc-hQikvm bgSxHu"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hZiMVj hkyZhj"
    >
      <input
        className="sc-hQikvm cKhYQq"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-kfWwvt bCTwqT"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hZiMVj ggbnAn"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm dyIvnO"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
    <div
      className="sc-hZiMVj hkyZhj"
    >
      <div
        className="sc-eZkcaX fwAgtM"
      >
        <input
          className="sc-hQikvm flRmta"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-hhICeM dxUkQc"
        />
      </div>
    </div>
  </div>
</div>
`;
